autosized and secured quiz stages